...
                        .font(.headline)
                        .foregroundColor(Color.black)
                        .padding()
                        .padding(.bottom, -8)

                    VStack(alignment: .center) {
                    TextField("Name", text: $vm.contactName)
                        .font(.title2)
                        .foregroundColor(Color(fontColorBox))
                        .frame(width: 300, height: 30, alignment: .leading)

                    TextField("Phone", value:  $vm.contactPhone, formatter: NumberFormatter())
                        .foregroundColor(Color(fontColorBox))
                        .font(.title3)
                        .frame(width: 300, height: 30, alignment: .leading)

                    }.frame(width: geometry.size.width*0.95, height: geometry.size.height/8, alignment: .center)
                        .background(Color(backgroundColorBox))
...
